Fix bug #49263 (Offset error when unserializing self-references in SplObjectStorage)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@289250 c90b9560-bf6c-de11-be94-00142212c4b1